# mybuildboard

./: .gitignore  README.md  index.html
backend/: AGENTS.md  Makefile  PROJECT_STATUS.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/achievements/: model.py  repository.py  router.py  schema.py  service.py
backend/app/api/: deps.py
backend/app/assets/: constants.py  dependencies.py  model.py  repository.py  router.py  schema.py  service.py
backend/app/auth/: dependencies.py  dependencies.py.bak  jwt.py  router.py  service.py
backend/app/boards/: model.py  repository.py  router.py  schema.py  service.py
backend/app/certificates/: model.py  repository.py  router.py  schema.py  service.py
backend/app/core/: security.py
backend/app/dashboard/: repository.py  router.py  schema.py  service.py
backend/app/db/: database.py  session.py
backend/app/educations/: model.py  repository.py  router.py  schema.py  service.py
backend/app/experiences/: model.py  repository.py  router.py  schema.py  service.py
backend/app/github/: client.py  model.py  repository.py  router.py  schema.py  security.py  service.py  state.py
backend/app/portfolio/: router.py  schema.py  service.py
backend/app/profiles/: model.py  repository.py  router.py  schema.py  service.py  service.py.bak
backend/app/projects/: model.py  repository.py  router.py  schema.py  service.py
backend/app/skills/: model.py  repository.py  router.py  schema.py  service.py
backend/migrations/: env.py
backend/tests/: conftest.py
(+232 files in other folders)
