[project]
name = "mybuildboard"
version = "0.1.0"
description = "Developer Portfolio Platform"
requires-python = ">=3.14"

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [
    "migrations",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = [
    "B008",
]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]